# IRC-Server

./: .gitignore  README.md
irc/: CMakeLists.txt  Makefile  client  server
irc/ircc/: client  client.c
irc/ircd/: channel.c  channel.h  client_handler.c  client_handler.h  commands.c  commands.h  config.c  config.h  linked_list.c  linked_list.h  logger.c  logger.h  server  server.c  server.conf
